--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         rel="stylesheet">
 </head>
 
-<body class="bg-myWhite font-body">
+<body class="bg-myWhite font-body text-myBlack">
+
     <section id="desktop-menu" class="sticky top-0">
         <nav class="bg-white flex justify-between text-xl px-2 py-2">
             <div class="font-logo self-end">Re:Think</div>
@@ -37,29 +38,33 @@
 
     <div class="bg-gradient-to-br from-grad1 via-grad2 to-grad3 h-screen flex flex-col justify-center px-3">
         <p class="font-hTitle text-5xl py-5">
-            Mastering Math, One Lesson at a Time
+            Mastering <span class="font-bold">Math</span>, One Lesson at a Time
         </p>
-        <p class="font-body text-xl">
+        <p class="font-body text-xl px-1">
             Whether you're looking to master problem-solving or simply gain more confidence in your skills, I'll be your
             guide
         </p>
     </div>
     <main class="px-2">
 
-        <div id="intro-card" class="bg-white my-10 flex p-3 md:container mx-auto">
-            <div class="w-1/3 bg-black">
-                <img src="img/Headshot_1.jpg" class="object-fill" alt="A picture of me">
+        <div id="intro-card" class="bg-white mt-16 flex flex-col p-3 mx-3">
+            <div class="bg-black h-56">
+                <img src="img/Headshot_1.jpg" class="h-full w-full object-cover object-center" alt="A picture of me">
             </div>
-            <div class="w-2/3 px-3 self-center">
-                <p class="text-xl text-myBlue py-2">
+            <div class=" px-3 self-center">
+                <p class="text-2xl text-myBlue font-semibold py-2">
                     Hi there!
                 </p>
                 <p>
-                    I'm Jedidiah, and it's a pleasure to be your companion on this thrilling learning journey. With a
-                    genuine passion for education and a strong grasp of mathematics, I'm here to provide you with the
-                    tools and knowledge you need to confidently conquer the world of arithmetic.
+                    I'm Jedidiah, it's a pleasure to be your companion on this thrilling learning journey. With a
+                    passion for education and a strong grasp of mathematics, I will provide you with the
+                    tools and knowledge to conquer the world of arithmetic.
                 </p>
             </div>
+        </div>
+
+        <div class="md:container -mx-2 md:mx-auto bg-black h-96 mt-16">
+
         </div>
     </main>
 
